--- a/webui/index.html
+++ b/webui/index.html
@@ -21,7 +21,6 @@
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
       <script src="js/vendor/bootstrap.min.js"></script>
       <script src="js/react-0.13.1.js"></script>
-      <script src="js/JSXTransformer-0.13.1.js"></script>
-      <script type="text/jsx" src="js/main.js"></script>
+      <script src="js/main.js"></script>
     </body>
 </html>
